# ddbms

./: CMakeLists.txt  LICENSE  README.md  interp.cpp  main.cpp  test_sql.sql  test_temp_result.sql
Defs/: Attribute.h  DeleteStmt.h  Fragment.h  InsertStmt.h  Predicate.h  Query.h  QueryTree.h  Table.h
Executor/: CMakeLists.txt  Executor.cpp  Executor.h  makefile  sql_single_node  sql_single_node.cpp  sql_table_structure  sql_table_structure.cpp
MetaData/: CMakeLists.txt  MetaData.cpp  MetaData.h
Network/: CMakeLists.txt  Executor.cpp  Executor.h  NetworkRequest.cpp  NetworkRequest.h  Server.cpp  ddbms.pb.cc  ddbms.pb.h
Network/proto/: ddbms.proto
Network/src/: CMakeLists.txt  net_client.cpp  net_server.cpp
Parser/: Optimizer.cpp  Optimizer.h  Parser.cpp  Parser.h
Utils/: Exceptions.h  RecordPrinter.h
files/: db_name.txt
